2008-05-05  John W. Eaton  <jwe@octave.org>

	* input.cc (Fre_read_readline_init_file): New function.

2008-05-04  John W. Eaton  <jwe@octave.org>

	* ov-fcn-handle.cc (Ffunctions): Pass octave_value object instead
	of Cell in structure field assignment.

	* parse.y (frob_function): Don't install subfunctions here.
	(finish_function): Handle subfunctions here.
	Conditionally define tree_function_def object here.

	* symtab.h (symbol_table::fcn_info::fcn_info_rep::find_function):
	Initialize args_evaluated.
	* pt-id.cc (tree_identifier::rvalue): Likewise.
	* variables.cc (symbol_exist): Likewise.

	* pt-id.h (tree_identifier::tree_identifer): Delete useless statement.

	* variables.cc (get_global_value): Use symbol_table::global_varval
	instead of passing scope to symbol_table::varval.
	(set_global_value): Use symbol_table::global_varref
	instead of passing scope to symbol_table::varref.
	(do_who): Use symbol_table::glob_global_variables
	instead of passing scope to symbol_table::glob_variables.
	(do_clear_globals):
	Use symbol_table::global_variable_names and
	symbol_table::clear_global instead of passing scope to
	symbol_table::clear_variables.
	Use symbol_table::global_variable_names instead of passing scope
	to symbol_table::variable_names.

	* unwind-prot.cc (unwind_protect::save_size_t): New function.
	(saved_variable::restore_value): Handle size_t values.
	(saved_variable::saved_variable): New size_t constructor.
	(saved_variable::size_type): New var_type enum value.
	(saved_variable::ptr_to_size_t, saved_variable::size_t_value):
	New union elements.
	* unwind-prot.h (unwind_protect::save_size_t): Provide decl
	(unwind_protect_size_t): New macro.

	* toplev.cc (octave_call_stack::do_goto_frame,
	octave_call_stack::do_goto_frame_relative): New functions.
	(octave_call_stack::do_backtrace): Also return scope and context ids.
	* toplev.h 	(octave_call_stack::do_goto_frame,
	octave_call_stack::do_goto_frame_relative): Provide decls.